# writing

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  Makefile  PLAN.md  README.md  auth.ts  codecov.yml  eslint.config.mjs  main.py  middleware.test.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.ts  vitest.config.ts
tools/: .coverage  evaluate.py  main.py  pyproject.toml
tools/config/: keywords.yaml  persona.yaml
tools/config/categories/: asset.yaml  health.yaml  programming.yaml
tools/data/keywords/: keywords.json
tools/design/: plan.md  spec.md  task.md
tools/design/agent-framework/: plan.md  spec.md  task.md
tools/notebooks/: keyword_finder_debug.ipynb
tools/spec/: agent-list.md  keyword-config-externalize-plan.md  keyword-config-externalize-task.md  keyword-config-externalize.md  keyword-search-agent.md
tools/spec/writer/: plan.md  spec.md  task.md
tools/src/common/: __init__.py  category_config.py  config.py  keyword_config.py  logging.py
tools/src/core/: __init__.py
tools/src/models/: llm_client.py
tools/src/pipelines/: __init__.py  orchestrator.py
tools/src/storage/: __init__.py  base.py  local.py  schemas.py  service.py  vercel_blob.py
tools/src/tools/: __init__.py  related_keywords.py  unsplash.py
tools/tests/agents/: test_evaluator.py  test_keyword_finder.py  test_persona.py  test_writer.py
tools/tests/common/: test_category_config.py  test_errors.py  test_keyword_config.py
tools/tests/core/: __init__.py  test_base_agent.py  test_base_node.py  (+2 more)
(+623 files in other folders)
