[project]
name = "writing"
version = "0.1.0"
description = "エージェント開発プロジェクト"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx",
    "langchain",
    "langchain-openai",
    "langgraph",
    "pydantic-settings",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ruff",
]
