[project]
name = "writing"
version = "0.1.0"
description = "エージェント開発プロジェクト"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "langchain",
    "langchain-openai",
    "langgraph",
    "pydantic-settings",
    "python-dotenv>=1.2.1",
    "pyyaml",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "notebook>=7.5.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ruff",
]
